--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^3.0.1",
     "prettier": "^2.6.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "utils-playground": "^1.3.1"
   }
 }
