--- a/modulo-03/exercicios-backend-conexao-nodejs-postgresql/01/package.json
+++ b/modulo-03/exercicios-backend-conexao-nodejs-postgresql/01/package.json
@@ -5,18 +5,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/supertest": "^2.0.12",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
+    "vite": "^4.4.9",
     "zod": "^3.22.2"
   }
 }
