--- a/modulo-03/exercicios-backend-integracao-api-terceiros/01/package.json
+++ b/modulo-03/exercicios-backend-integracao-api-terceiros/01/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "qs": "^6.11.2",
+    "zod": "^3.22.2"
   }
 }
