--- a/modulo-04/exercicios-backend-envio-emails/01/package.json
+++ b/modulo-04/exercicios-backend-envio-emails/01/package.json
@@ -4,12 +4,14 @@
   "description": "![](https://i.imgur.com/xG74tOh.png)",
   "main": "index.js",
   "scripts": {
-    "start:dev": "tsx src/server.ts"
+    "start:dev": "tsx watch ./src/server.ts",
+    "lint": "eslint src --ext ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.6.0",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
