--- a/modulo-04/exercicios-backend-envio-emails/01/package.json
+++ b/modulo-04/exercicios-backend-envio-emails/01/package.json
@@ -13,10 +13,12 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.6.0",
+    "prisma": "^5.3.0",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.0",
     "@types/express": "^4.17.17",
     "express": "^4.18.2"
   }
