--- a/modulo-04/exercicios-backend-envio-emails/01/package.json
+++ b/modulo-04/exercicios-backend-envio-emails/01/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "tsx watch ./src/server.ts",
+    "test": "vitest --run",
     "lint": "eslint src --ext ts --fix"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.6.0",
+    "@types/nodemailer": "^6.4.10",
     "prisma": "^5.3.0",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
@@ -20,6 +22,10 @@
   "dependencies": {
     "@prisma/client": "^5.3.0",
     "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.5",
+    "vitest": "^0.34.4",
+    "zod": "^3.22.2"
   }
 }
