--- a/modulo-04/exercicios-backend-envio-emails/01/package.json
+++ b/modulo-04/exercicios-backend-envio-emails/01/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.17",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.5",
     "vitest": "^0.34.4",
